# rusty_ffmpeg

./: .env  .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  rustfmt.toml
.github/workflows/: ci.yml
examples/slice/: main.rs
examples/slice/output/: frame-1.pgm  frame-2.pgm  frame-3.pgm  frame-4.pgm  frame-5.pgm  frame-6.pgm  frame-7.pgm
skills/ffmpeg-constant-sync/: SKILL.md
skills/ffmpeg-constant-sync/agents/: openai.yaml
skills/ffmpeg-constant-sync/references/: tag-audit-commands.md
src/: README.md  binding.rs  lib.rs  main.rs
src/avutil/: _avutil.rs  avutil.rs  channel_layout.rs  common.rs  error.rs  mod.rs  pixfmt.rs  rational.rs
