[package]
name = "rusty_ffmpeg"
version = "0.6.0"
authors = ["ldm0 <ldm2993593805@163.com>"]
edition = "2018"

license = "MIT"
description = "A library that provides Rust bindings for FFmpeg"
homepage = "https://github.com/CCExtractor/rusty_ffmpeg/"
documentation = "https://docs.rs/rusty_ffmpeg"
repository = "https://github.com/CCExtractor/rusty_ffmpeg/"
readme = "README.md"

keywords = ["ffmpeg", "ffi", "binding", "video", "audio"]
categories = ["external-ffi-bindings", "multimedia"]

exclude = [".github"]
build = "build.rs"

# Doc test of generated binding is non-sense https://github.com/rust-lang/cargo/issues/3720
[lib]
doctest = false

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.58"
once_cell = "1.7"

[target.'cfg(not(windows))'.build-dependencies]
pkg-config = "0.3"

[target.'cfg(windows)'.build-dependencies]
vcpkg = "0.2"

