[package]
name = "rusty_ffmpeg"
version = "0.14.1+ffmpeg.7.0"
authors = ["ldm0 <ldm2993593805@163.com>"]
edition = "2021"
description = "A library that provides Rust bindings for FFmpeg"
documentation = "https://docs.rs/rusty_ffmpeg"
readme = "README.md"
homepage = "https://github.com/CCExtractor/rusty_ffmpeg/"
repository = "https://github.com/CCExtractor/rusty_ffmpeg/"
license = "MIT"

keywords = ["ffmpeg", "ffi", "binding", "video", "audio"]
categories = ["external-ffi-bindings", "multimedia"]

build = "build.rs"
links = "ffmpeg"
exclude = [".github"]

# Doc test of generated binding is non-sense https://github.com/rust-lang/cargo/issues/3720
[lib]
doctest = false

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.69"
camino = "1.0.9"
once_cell = "1.12"
regex = "1.5"

[target.'cfg(not(windows))'.build-dependencies]
pkg-config = "0.3"

[target.'cfg(windows)'.build-dependencies]
vcpkg = "0.2"

[features]
# linking system ffmpeg as fallback.
link_system_ffmpeg = []
# FFmpeg 5.* support
ffmpeg5 = []
# FFmpeg 6.* support
ffmpeg6 = []
# FFmpeg 7.* support
ffmpeg7 = []
